# ai-code

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/ai_code/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
